# reaper-panns-audio-report

./: .gitignore  .reapack-index.conf  CHANGELOG.md  README.md  README.ru.md  THIRD_PARTY_NOTICES.md  index.xml  pyproject.toml  security_best_practices_report.md
.github/workflows/: ci.yml  release.yml
docs/: install.md  install.ru.md  troubleshooting.md  troubleshooting.ru.md
reaper/: PANNs Item Report - Debug Export.lua  PANNs Item Report.lua  REAPER Audio Tag - Configure.lua  REAPER Audio Tag - Debug Export.lua  REAPER Audio Tag - Setup.lua  REAPER Audio Tag.lua
reaper/assets/noto-emoji/: LICENSE-APACHE-2.0.txt  README.md
reaper/lib/: app_paths.lua  configure_runtime.lua  path_utils.lua  report_icon_assets.lua  report_icon_map.lua  report_icons.lua  report_presenter.lua  report_telemetry.lua  runtime_client.lua  setup_release_info.lua  setup_runtime.lua
runtime/: README.md
runtime/docs/: install.md
runtime/src/reaper_panns_runtime/: __init__.py  __main__.py  backend.py  bootstrap.py  (+9 more)
scripts/: build_manual_installer.py  build_release_manifest.py  build_runtime_bundle.py  create_local_venv_macos.sh  generate_reapack_index.sh  generate_report_emoji_assets.py  setup_runtime_macos.sh
tests/: README.md
tests/integration/: test_end_to_end.py
tests/lua/: run_tests.lua  test_report_formatter.lua  test_report_icons.lua  test_runtime_client.lua  test_setup_runtime.lua
tests/python/: test_bootstrap_model_paths.py  test_contracts.py  test_runtime_cli.py
tests/scripts/: run_all_tests.sh  run_integration_tests.sh  run_python_tests.py  run_python_tests.sh
(+7 files in other folders)
